@@ -23,7 +23,6 @@ import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.satel.internal.config.Ethm1Config;
 import org.openhab.binding.satel.internal.protocol.Ethm1Module;
 import org.openhab.binding.satel.internal.protocol.SatelModule;
-import org.openhab.binding.satel.internal.util.StringUtils;
 import org.openhab.core.config.core.status.ConfigStatusMessage;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.ThingStatus;
@@ -54,7 +53,7 @@ public class Ethm1BridgeHandler extends SatelBridgeHandler {
         logger.debug("Initializing handler");
 
         Ethm1Config config = getConfigAs(Ethm1Config.class);
-        if (StringUtils.isNotBlank(config.getHost())) {
+        if (!config.getHost().isBlank()) {
             SatelModule satelModule = new Ethm1Module(config.getHost(), config.getPort(), config.getTimeout(),
                     config.getEncryptionKey(), config.hasExtCommandsSupport());
             super.initialize(satelModule);
@@ -71,7 +70,7 @@ public class Ethm1BridgeHandler extends SatelBridgeHandler {
         Collection<ConfigStatusMessage> configStatusMessages;
 
         // Check whether an IP address is provided
-        if (StringUtils.isBlank(host)) {
+        if (host.isBlank()) {
             configStatusMessages = Collections.singletonList(ConfigStatusMessage.Builder.error(HOST)
                     .withMessageKeySuffix("hostEmpty").withArguments(HOST).build());
         } else {
